Show fixed save changed button only when floating button isn't visible.

--- a/css/src/admin-global.scss
+++ b/css/src/admin-global.scss
@@ -520,32 +520,35 @@ td.column-wpseo-linked {
 	}
 }
 
-.yoast-free-admin-footer {
-	z-index: 1;
-	position: fixed;
-	bottom: 0;
-	left: 160px;
-	right: 281px;
-	background-color: white;
+.wpseo-admin-submit {
+	z-index: 5;
 	display: flex;
-	padding: 16px;
-	justify-content: flex-end;
+	padding: 16px 0;
+	justify-content: flex-start;
 	align-items: baseline;
-	margin: 0 16px;
-	box-shadow: 0px 1px 8px 1px rgba(0,0,0,0.5);
-	max-width: 800px;
+	margin: 0;
 
-	@media screen and (max-width: 1024px) {
-		right: 0;
-	}
+	&.wpseo-admin-submit-fixed {
+		padding: 16px;
+		position: fixed;
+		bottom: 0;
+		left: 160px;
+		right: 281px;
+		background-color: white;
+		max-width: 800px;
+		box-shadow: 0 1px 8px 1px rgba(0,0,0,0.5);
+		margin: 0 16px;
 
-	@media only screen and (max-width: 960px) {
-		left: 36px;
-	}
-
-	@media screen and (max-width: 782px) {
-		left: 0;
-		margin: 0;
+		@media screen and (max-width: 1024px) {
+			right: 0;
+		}
+		@media only screen and (max-width: 960px) {
+			left: 36px;
+		}
+		@media screen and (max-width: 782px) {
+			left: 0;
+			margin: 0;
+		}
 	}
 
 	p.submit {
